--- a/packages/express-middleware/package.json
+++ b/packages/express-middleware/package.json
@@ -6,7 +6,46 @@
   "types": "./dist/index.d.ts",
   "license": "MIT",
   "scripts": {
+    "start": "ts-node ./src/playground/index.ts",
+    "playground": "cross-env DEBUG=Switchly* nodemon --exec yarn start",
     "build": "bili --config ../../bili.config.ts",
     "watch": "bili --watch --config ../../bili.config.ts"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.1",
+    "@types/flat": "^0.0.28",
+    "@types/jest": "^24.0.21",
+    "@types/lodash.camelcase": "^4.3.6",
+    "@types/node": "^12.12.3",
+    "@types/react": "^16.9.11",
+    "@types/uuid": "^3.4.6",
+    "bili": "^4.8.1",
+    "cross-env": "^6.0.3",
+    "jest": "^24.9.0",
+    "jest-config": "^24.9.0",
+    "nodemon": "^1.19.4",
+    "rimraf": "^3.0.0",
+    "rollup-plugin-typescript2": "^0.24.3",
+    "ts-jest": "^24.1.0",
+    "ts-node": "^8.4.1",
+    "tslint": "^5.20.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.6.4"
+  },
+  "dependencies": {
+    "@cornerstone-digital/loggerhead": "^1.4.6",
+    "@mattkrick/event-source-polyfill": "^0.1.0",
+    "@mattkrick/event-target-polyfill": "^0.1.0",
+    "ajv": "^6.10.2",
+    "event-source-polyfill": "^1.0.9",
+    "express": "^4.17.1",
+    "flat": "^5.0.0",
+    "react": "^16.11.0",
+    "reflect-metadata": "^0.1.13",
+    "tslib": "^1.10.0",
+    "typedi": "^0.8.0",
+    "typescript-map": "^0.0.7",
+    "uuid": "^3.3.3"
   }
 }
