--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,38 @@
 {
   "compilerOptions": {
-    "module": "esnext",
+    /* Basic Options */
+    "incremental": true,
+    "target": "es5",
+    "module": "commonjs",
     "lib": ["esnext", "dom"],
-    "strict": true,
     "declaration": true,
+    "declarationMap": true,
+    "jsx": "preserve",
+    "sourceMap": true,
+    "removeComments": true,
+    "importHelpers": true,
+
+    /* Module Resolution Options */
+    "moduleResolution": "node",
+    "typeRoots": [
+      "./node_modules/@types",
+      "src/types"
+    ],
+
+    /* Strict Type-Checking Options */
+    "strict": true,
+    "noImplicitAny": true,
+
+    /* Additional Checks */
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+
+    /* Additional Options */
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "moduleResolution": "node"
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
