--- a/packages/express-middleware/package.json
+++ b/packages/express-middleware/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "@switchly/express-middleware",
-  "version": "0.0.0",
-  "main": "dist/switchly-middleware.cjs.js",
-  "module": "dist/switchly-middleware.esm.js",
+  "name": "@cornerstone-digital/switchly-express-middleware",
+  "version": "0.1.0-alpha.1",
+  "main": "dist/package.cjs.js",
+  "module": "dist/package.esm.js",
   "types": "./dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node ./src/playground/index.ts",
+    "start": "ts-node --project ../../tsconfig.json ./src/playground/index.ts",
+    "json-server": "json-server ./.jsondb/data.json",
     "playground": "cross-env DEBUG=Switchly* nodemon --exec yarn start",
+    "build:app": "",
     "build": "bili --config ../../bili.config.ts",
     "watch": "bili --watch --config ../../bili.config.ts"
   },
   "devDependencies": {
-    "@types/express": "^4.17.1",
+    "@types/express": "^4.17.2",
     "@types/flat": "^0.0.28",
     "@types/jest": "^24.0.21",
     "@types/lodash.camelcase": "^4.3.6",
-    "@types/node": "^12.12.3",
+    "@types/mongodb": "^3.3.9",
+    "@types/node": "^12.12.5",
     "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
     "@types/uuid": "^3.4.6",
     "bili": "^4.8.1",
     "cross-env": "^6.0.3",
     "jest": "^24.9.0",
     "jest-config": "^24.9.0",
+    "json-server": "^0.15.1",
+    "node-sass": "^4.13.0",
     "nodemon": "^1.19.4",
     "rimraf": "^3.0.0",
     "rollup-plugin-typescript2": "^0.24.3",
@@ -30,22 +36,42 @@
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.6.4"
+    "tslint-config-standard": "^9.0.0",
+    "typescript": "^3.7.2"
   },
   "dependencies": {
     "@cornerstone-digital/loggerhead": "^1.4.6",
     "@mattkrick/event-source-polyfill": "^0.1.0",
     "@mattkrick/event-target-polyfill": "^0.1.0",
+    "@nano-sql/adapter-redis": "^2.0.7",
+    "@nano-sql/core": "^2.3.7",
     "ajv": "^6.10.2",
+    "cormo": "^0.12.10",
     "event-source-polyfill": "^1.0.9",
     "express": "^4.17.1",
     "flat": "^5.0.0",
+    "jugglingdb": "^2.0.1",
+    "jugglingdb-mongodb": "^0.2.0",
+    "jugglingdb-redis-hq": "^0.1.4",
+    "mongodb": "^3.3.3",
     "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-express-middleware": "^3.1.3",
     "reflect-metadata": "^0.1.13",
     "tslib": "^1.10.0",
     "typedi": "^0.8.0",
     "typescript-map": "^0.0.7",
     "uuid": "^3.3.3"
+  },
+  "nodemonConfig": {
+    "ext": "js, yml, yaml, ts, properties",
+    "watch": [
+      "**/*"
+    ],
+    "ignore": [
+      "dist/*",
+      "coverage/*",
+      "**/*.test.ts"
+    ]
   }
 }
