--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -21,13 +21,12 @@
     "url": "git+https://github.com/switchly/lib-switchly.git"
   },
   "dependencies": {
-    "@mattkrick/event-source-polyfill": "^0.1.0",
-    "@mattkrick/event-target-polyfill": "^0.1.0",
     "event-source-polyfill": "^1.0.9",
     "lodash.camelcase": "^4.3.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "tslib": "^1.10.0"
+    "tslib": "^1.10.0",
+    "typescript-map": "^0.0.7"
   },
   "devDependencies": {
     "@types/lodash.camelcase": "^4.3.6",
