--- a/packages/express-middleware/tsconfig.json
+++ b/packages/express-middleware/tsconfig.json
@@ -6,7 +6,7 @@
     "declarationDir": "./dist",
     "typeRoots": [
       "./node_modules/@types",
-      "src/types"
+      "./src/types"
     ]
   }
 }
