--- a/packages/express-middleware/package.json
+++ b/packages/express-middleware/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@cornerstone-digital/switchly-express-middleware",
-  "version": "0.1.0-alpha.7",
+  "version": "0.1.0-alpha.11",
   "main": "dist/package.cjs.js",
   "module": "dist/package.esm.js",
   "types": "./dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node --project ../../tsconfig.json ./src/playground/index.ts",
+    "start": "cross-env TS_NODE_FILES=true ts-node --project ../../tsconfig.json ./src/playground/index.ts",
     "json-server": "json-server ./.jsondb/data.json",
     "playground": "cross-env DEBUG=Switchly* nodemon --exec yarn start",
     "build:app": "",
@@ -17,13 +17,19 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/flat": "^0.0.28",
+    "@types/helmet": "^0.0.45",
     "@types/jest": "^24.0.21",
     "@types/lodash.camelcase": "^4.3.6",
     "@types/mongodb": "^3.3.9",
     "@types/node": "^12.12.5",
     "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.9.3",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-router-config": "^5.0.1",
+    "@types/react-router-dom": "^5.1.2",
     "@types/uuid": "^3.4.6",
+    "@types/webpack": "^4.39.8",
+    "@types/webpack-dev-middleware": "^2.0.3",
+    "@types/webpack-hot-middleware": "^2.16.5",
     "bili": "^4.8.1",
     "cross-env": "^6.0.3",
     "jest": "^24.9.0",
@@ -38,7 +44,9 @@
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
     "@cornerstone-digital/loggerhead": "^1.4.6",
@@ -48,16 +56,23 @@
     "event-source-polyfill": "^1.0.9",
     "express": "^4.17.1",
     "flat": "^5.0.0",
+    "helmet": "^3.21.2",
     "mongodb": "^3.3.3",
     "mongodb-client-encryption": "^0.3.1",
+    "node-sass-middleware": "^0.11.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-express-middleware": "^3.1.3",
+    "react-router": "^5.1.2",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-ssr": "^2.0.0-beta.5",
     "reflect-metadata": "^0.1.13",
     "tslib": "^1.10.0",
     "typedi": "^0.8.0",
     "typescript-map": "^0.0.7",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "webpack": "^4.41.2"
   },
   "nodemonConfig": {
     "ext": "js, yml, yaml, ts, properties",
