--- a/packages/express-middleware/package.json
+++ b/packages/express-middleware/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cornerstone-digital/switchly-express-middleware",
-  "version": "0.1.0-alpha.11",
+  "version": "0.1.0-alpha.17",
   "main": "dist/package.cjs.js",
   "module": "dist/package.esm.js",
   "types": "./dist/index.d.ts",
@@ -9,12 +9,17 @@
     "start": "cross-env TS_NODE_FILES=true ts-node --project ../../tsconfig.json ./src/playground/index.ts",
     "json-server": "json-server ./.jsondb/data.json",
     "playground": "cross-env DEBUG=Switchly* nodemon --exec yarn start",
-    "build:app": "",
+    "app:start": "parcel ./src/web-app/index.html",
+    "app:build": "parcel build ./src/web-app/index.html -d ./dist/app",
+    "prestart": "yarn app:build",
     "prebuild": "rm -rf dist",
     "build": "bili --config ../../bili.config.ts",
+    "postbuild": "yarn app:build",
     "watch": "bili --watch --config ../../bili.config.ts"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.2",
     "@types/flat": "^0.0.28",
     "@types/helmet": "^0.0.45",
@@ -37,8 +42,10 @@
     "json-server": "^0.15.1",
     "node-sass": "^4.13.0",
     "nodemon": "^1.19.4",
+    "parcel": "^1.12.4",
     "rimraf": "^3.0.0",
     "rollup-plugin-typescript2": "^0.24.3",
+    "serve": "^11.2.0",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
@@ -50,9 +57,13 @@
   },
   "dependencies": {
     "@cornerstone-digital/loggerhead": "^1.4.6",
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
     "@nano-sql/adapter-redis": "^2.0.7",
     "@nano-sql/core": "^2.3.7",
     "ajv": "^6.10.2",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "event-source-polyfill": "^1.0.9",
     "express": "^4.17.1",
     "flat": "^5.0.0",
@@ -75,7 +86,7 @@
     "webpack": "^4.41.2"
   },
   "nodemonConfig": {
-    "ext": "js, yml, yaml, ts, properties",
+    "ext": "js, yml, yaml, ts, tsx, properties, scss, json",
     "watch": [
       "**/*"
     ],
